[Refactoring] Cleanup code